# omnivoice_app

./: .gitignore  README.md  package-lock.json
chat-app/: .env.example  SPEC.md  index.html  package-lock.json  package.json  vite.config.js
chat-app/src/: App.css  App.jsx  index.css
chat-app/src/components/: ChatContainer.css  ChatContainer.jsx  ChatHistory.css  ChatHistory.jsx  ChatMessage.css  ChatMessage.jsx  Header.css  Header.jsx  MessageInput.css  MessageInput.jsx  PersonaEditor.css  PersonaEditor.jsx  PersonaSelector.css  PersonaSelector.jsx  ProviderSelector.css  ProviderSelector.jsx  RealtimeStsToggle.css  RealtimeStsToggle.jsx  SearchOverlay.css  SearchOverlay.jsx  SettingsModal.css  SettingsModal.jsx  TypingIndicator.css  TypingIndicator.jsx  VoiceSettings.css  VoiceSettings.jsx
chat-app/src/data/: personas.js
chat-app/src/services/: api.js  minimax.js  ollama.js  omnivoice.js
chat-app/src/utils/: directorMode.js  storyMode.js  text.js
omnivoice-server/: pyproject.toml  requirements.txt
omnivoice-server/app/: __init__.py  audio.py  main.py  model.py  schemas.py
